<resources>
    <string name="app_name">Park It!</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="edit_profile"><u><![CDATA[Edit profile >]]></u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking">Booking</string>
    <string name="book">Book</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="floor">Floor</string>
    <string name="ug_floor">UG Floor</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="parking_lot">Parking Lot</string>
    <string name="booking_fee">Booking Fee</string>
    <string name="choose_payment">Choose Payment Method</string>
    <string name="payment_details">Payment Details</string>
    <string name="enter_hour">Enter Hour</string>
    <string name="leave_hour">Leave Hour</string>
    <string name="total_hour">Total Hour</string>
    <string name="price_per_hour">Price per hour</string>
    <string name="payment_method">Payment Method</string>
    <string name="checkout">Check out</string>
    <string name="close">Close</string>
    <string name="booking_details">Booking Details</string>
    <string name="scan_barcode">Scan this barcode when you’re at parking station</string>
    <string name="location">Location</string>
    <string name="vehicle">Vehicle</string>
    <string name="no_account">Don\'t have any account?</string>
    <string name="register_here">Register here!</string>
    <string name="login">Login</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authentication_failed">Authentication Failed!</string>
    <!--  TODO: Placeholder Parking Lot -->
    <string name="mall">Paragon Mall</string>
    <string name="available_slot">25 Available</string>
    <string name="price_hour">Rp 5000/hour</string>
    <string name="price">Rp 5000,00</string>
    <string name="hour_placeholder">10.30 AM</string>
    <string name="total_hour_placeholder">3 hours</string>
    <string name="total">TOTAL</string>
    <string name="go_pay">GoPay</string>
    <string name="ovo">OVO</string>
    <string name="dana">DANA</string>
    <string name="shopee_pay">ShopeePay</string>
    <string name="free_booking_fee">Free Booking Fee</string>
    <string name="rp3000">Rp 3.000,00</string>
    <string name="no_parking_history">There is no parking history</string>
    <string name="no_car_parking_history">There is no car parking history</string>
    <string name="no_motorcycle_parking_history">There is no motorcycle parking history</string>
</resources>