<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical"
        android:background="@color/main_color">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="190dp"
            android:src="@drawable/white_logo"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_white_box"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_white_box"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

        <TextView
            android:id="@+id/tv_authentication_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/authentication_failed"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:background="@drawable/button_rounded"
            android:backgroundTint="@color/red_flat"
            android:textAlignment="center"
            android:gravity="center"
            android:paddingVertical="10dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/button_rounded"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/ll_register_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>







</ScrollView>