<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            android:textSize="28sp"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_directions_car_24"
                app:tint="@color/black"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vehicle_type"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvVehicleTypeCO"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center_vertical"
                android:text="@string/car"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_login_24"
                app:tint="@color/black"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enter_hour"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvEnterHourCO"
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hour_placeholder"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_logout_24"
                app:tint="@color/black"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/leave_hour"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvLeaveHourCO"
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hour_placeholder"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_access_time_24"
                app:tint="@color/black"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/total_hour"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvTotalHourCO"
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/total_hour_placeholder"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_money_24"
                app:tint="@color/black"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price_per_hour"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvPricePerHourCO"
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_credit_card_24"
                app:tint="@color/black"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/payment_method"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvPaymentMethodCO"
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shopee_pay"
                android:textSize="18sp"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            android:layout_marginVertical="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/red"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/tvTotalPriceCO"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/price"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/close"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"/>

</RelativeLayout>