<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/booking_details"
                android:textSize="28sp"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginVertical="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="35dp"
                    android:background="@drawable/style_bordered">

                    <!--                TODO: code-->
                    <ImageView
                        android:id="@+id/ivBarcodeOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_barcode"
                        android:textColor="@color/red"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:layout_marginVertical="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/grey"
                        android:layout_marginBottom="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/location"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/tvMallNameBD"
                            android:layout_weight="1.2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/mall"
                            android:textSize="18sp"
                            android:textColor="@color/main_color"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:layout_marginVertical="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/floor"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/tvFloorName"
                            android:layout_weight="1.2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/ug_floor"
                            android:textSize="18sp"
                            android:textColor="@color/main_color"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:layout_marginVertical="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/vehicle"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/tvVehicleTypeBD"
                            android:layout_weight="1.2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/car"
                            android:textSize="18sp"
                            android:textColor="@color/main_color"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:layout_marginVertical="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llEnterHourBD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/enter_hour"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/tvEnterHourBD"
                            android:layout_weight="1.2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/hour_placeholder"
                            android:textSize="18sp"
                            android:textColor="@color/main_color"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:layout_marginVertical="5dp"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="25dp">

                <Button
                    android:id="@+id/btnCheckOut"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/checkout"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_rounded"/>

                <LinearLayout
                    android:id="@+id/llSecretBtn"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>