<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/booking"
                android:textSize="35sp"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/spinnerVehicleType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="@drawable/style_spinner"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/floor"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/spinnerFloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="@drawable/style_spinner"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/tvBookingAvailableSlots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="50 Available Slots"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="25dp">

        <Button
            android:id="@+id/btnBook"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/book"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/button_rounded"/>

    </RelativeLayout>

</RelativeLayout>